<resources>
    <string name="app_name">ProyectoManzanares</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"> Programación Nativa para Móviles </string>
    <string name="nav_header_subtitle"> Carlos Daniel Ruiz Zuñiga </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home"> Consultar Orden </string>
    <string name="menu_gallery"> Generar Orden</string>
    <string name="menu_slideshow"> Eliminar Orden </string>
    <string name="ordenes_de_pago">Ordenes de Pago</string>
    <string name="order_id">Order ID</string>
    <string name="order_date">Order Date</string>
    <string name="total_due">Total Due</string>
    <string name="insert_order">Insert Order</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="product_id">Product ID</string>
    <string name="order_date_yyyy_mm_dd">Order Date (YYYY-MM-DD)</string>
    <string name="customer_id">Customer ID</string>
    <string name="insert_new_order">Insert New Order</string>
</resources>